[README] clean up and update readme
