# awesome-api/src/controller/flikrController.ts
@@ -1,8 +1,11 @@
 import { HttpRequestInterface } from '../helpers/httpRequestHandler';
-import sendHttpResponse, { HttpResponseInterface } from '../helpers/httpResponseHandler';
-import sendHttpError, { HttpStatusCodeEnum, handleHttpErrors } from '../helpers/httpErrorHandler';
 import makeFlikr from '../model/flikr/flickr';
+import sendHttpError, { HttpStatusCodeEnum, handleHttpErrors } from '../helpers/httpErrorHandler';
+import sendHttpResponse, { HttpResponseInterface } from '../helpers/httpResponseHandler';
 
+/**
+ * Factory function handles all http methods to flickr endpoint
+ */
 export default function flikrEndpointHandler(): 
     (httpRequest: HttpRequestInterface, body: any, page: number) => Promise<HttpResponseInterface> {
     return async function handle(httpRequest: HttpRequestInterface, body: any, page: number): Promise<HttpResponseInterface> {
@@ -15,6 +18,11 @@ export default function flikrEndpointHandler():
         }
     };
 
+    /**
+     * handle flickr response by page
+     * @param body 
+     * @param page 
+     */
     async function getFlikrData(body: any, page: number): Promise<HttpResponseInterface> {
         try {
             const flikrListData = makeFlikr(JSON.parse(body).items);                
