# awesome-api/src/controller/userController.ts
@@ -1,12 +1,15 @@
 import * as bcrypt from 'bcryptjs';
 
-import { HttpRequestInterface } from '../helpers/httpRequestHandler';
-import sendHttpError, { HttpStatusCodeEnum, handleHttpErrors } from '../helpers/httpErrorHandler';
-import { UserServiceImpl } from '../service/userService';
-import sendHttpResponse, { HttpResponseInterface } from '../helpers/httpResponseHandler';
 import { createToken } from '../helpers/token-helper';
+import { HttpRequestInterface } from '../helpers/httpRequestHandler';
+import { UserServiceImpl } from '../service/userService';
 import makeUser from '../model/user/user';
+import sendHttpError, { HttpStatusCodeEnum, handleHttpErrors } from '../helpers/httpErrorHandler';
+import sendHttpResponse, { HttpResponseInterface } from '../helpers/httpResponseHandler';
 
+/**
+ * factory function handles all allowed methods to user endpoint
+ */
 export default function userEndpointHandler(): (httpRequest: HttpRequestInterface) => Promise<HttpResponseInterface> {
     return async function handle(httpRequest: HttpRequestInterface): Promise<HttpResponseInterface> {
         switch (httpRequest.method) {
@@ -18,6 +21,10 @@ export default function userEndpointHandler(): (httpRequest: HttpRequestInterfac
         }
     };
 
+    /**
+     * Add new user
+     * @param httpRequest 
+     */
     async function postUser(httpRequest: HttpRequestInterface): Promise<HttpResponseInterface> {
         try {
             const user = makeUser(httpRequest.body, bcrypt);
