# awesome-api/src/helpers/httpErrorHandler.ts
@@ -50,7 +50,7 @@ export class UniqueConstraintError extends Error {
  * @param error 
  */
 export function handleHttpErrors(error: any): HttpResponseInterface {
-  let statusCode = HttpStatusCodeEnum.BAD_REQUEST;
+  let statusCode = error.statusCode || HttpStatusCodeEnum.BAD_REQUEST;
   let errorsMsg = error.message || error.error;
   if (error instanceof UniqueConstraintError || error.code === 11000) {
       errorsMsg = 'User already exist';
